@@ -1,3 +1,15 @@
+2007-02-13  Dex Deacon  <occupant4@gmail.com>
+
+        Reviewed by Darin.
+
+        - fix for http://bugs.webkit.org/show_bug.cgi?id=12750
+          Vector operator== was not defined correctly. It returned void,
+          did not accept const Vectors, and used an int instead of size_t. 
+
+        * rendering/RenderStyle.h: Added a != operator for StyleDashboardRegion.
+        The only reason this compiled before was that the comparing two vectors
+        with a != was simply comparing the pointers.
+
 2007-02-13  Darin Adler  <darin@apple.com>
 
         - roll out fix for <rdar://problem/4874059> REGRESSION: Painter IX:register -
